# bigs

./: .gitignore  LICENSE  README.md  environment.yml
nsextension/: README.md  pyproject.toml
nsextension/masksplat/: datamanager.py  dataparser.py  dataparser_config.py  mask_splat.py  method_config.py  pipeline.py
relight/: bigs.py  bigs_olat_dataset.py  constants.py  dict_to_camera.py  double_shs_single_eval.py  envmap_lookup.py  envmap_sh_encode.py  eval_spherical_harmonics.py  gamma_correction.py  get_sh_encoder.py  inverse_sigmoid.py  make_nerfstudio_cameras.py  make_video.py  plot_results.py  pose_matrix_opengl.py  read_exr.py  render_bigs_with_point_light.py  render_splats.py  transform_matrix_flip_y.py  transform_matrix_flip_z.py  upper_to_symmetric.py
relight/c/: CMakeLists.txt  __init__.py
relight/c/src/: bindings.cpp  spherical_harmonics.cuh  tensors.cu  tensors.cuh  triu_index1d.cuh
scripts/: envmap_relight.py  load_pretrained_and_set_args.py  point_relight.py  training.py
tests/: test_eval_spherical_harmonics.py
